--- a/src/BiddingService/Dockerfile
+++ b/src/BiddingService/Dockerfile
@@ -2,9 +2,8 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 as build
 WORKDIR /app
 EXPOSE 80
 
-# Copy all .csproj files and restore as distinct layers
-# Use of the same COPY command for every dokckerrile in 
-# the project to take advantage of the docker caching
+# copy all .csproj files and restore as distinct layers.   Use of the same COPY command
+# for every dockerfile in the project to take advantage of docker caching
 COPY Carsties.sln Carsties.sln
 COPY src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.csproj
 COPY src/SearchService/SearchService.csproj src/SearchService/SearchService.csproj
@@ -13,17 +12,17 @@ COPY src/BiddingService/BiddingService.csproj src/BiddingService/BiddingService.
 COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
 COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 
-# Restore package dependencies
+# Restore package deps
 RUN dotnet restore Carsties.sln
 
-
 # Copy the app folders over
-COPY src/GatewayService src/GatewayService
-WORKDIR /app/src/GatewayService
+COPY src/BiddingService src/BiddingService
+COPY src/Contracts src/Contracts
+WORKDIR /app/src/BiddingService
 RUN dotnet publish -c Release -o /app/src/out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/src/out .
-ENTRYPOINT [ "dotnet", "GatewayService.dll" ]
+ENTRYPOINT [ "dotnet", "BiddingService.dll" ]
