--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.0",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "date-fns": "^3.6.0",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^14.2.2",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.9",
-    "next": "13.4.7",
+    "next": "^14.2.2",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-datepicker": "^4.15.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
